--- a/themes/zooberry/assets/css/sidebar_l.css
+++ b/themes/zooberry/assets/css/sidebar_l.css
@@ -1,11 +1,10 @@
 .sidebar {
-    position: fixed;
-    padding-top: 5rem;
+    padding-top: 1rem;
+    position: -webkit-sticky; /* For Safari */
+    position: sticky;
     top: 0;
-    left: 0;
-    bottom: 0;
     z-index: 1000;
-    display: block;
+    height: 100%;
     width: 250px;
     background: var(--secondary-bg);
     scrollbar-color: #324363 #1b263b;
@@ -18,6 +17,9 @@
     -o-transition: all 0.3s;
     -ms-transition: all 0.3s;
     margin-right: 3rem;
+}
+
+section {
 }
 
 .sidebar h3 {
